--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <a-scene>
         <a-assets>
             <img id="sky" src="./assets/sky_360.jpg">
-            <img id="ground" src="./assets/pollock.png">
-            <img id="art1" src="./assets/sam_1.png">
+            <img id="ground" src="./assets/pollock.jpg">
+            <img id="art1" src="./assets/sam_1.jpg">
         </a-assets>
         <!-- <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
         <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
